Reduce hero dash width from 32px to 24px to avoid italic overlap

--- a/src/index.css
+++ b/src/index.css
@@ -1125,7 +1125,7 @@ a {
 
 .hero__dash {
   display: inline-block;
-  width: 32px;
+  width: 24px;
   vertical-align: middle;
   opacity: 0.3;
   margin: 0 var(--space-5);
